[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = ""
authors = ["Murilo Baptista <muboeira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
